--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -20,8 +20,8 @@
             <tbody id="tbody">
                 {{#posts}}
                     <tr>
-                        <td>{{id}}/td>
-                        <td>{{title}}</td>
+                        <td>{{id}}</td>
+                        <td><a href="/posts/update/{{id}}">{{title}}</a></td>
                         <td>{{author}}</td>
                         <td>{{modifiedDate}}</td>
                     </tr>
